<resources>
    <string name="app_name">Ecommerce</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="appIcon">appicon</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">SignUp</string>
    <string name="login">login</string>
    <string name="by_signing_up_you_have_agreed_to_our">By signing up you have agreed to our</string>
    <string name="terms_and_services">Terms and Services</string>
    <string name="by_logging_in_you_have_agreed_to_our">by logging in you have agreed to our</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="phone">phone</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">text</string>
    <string name="log_out">log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="upload">Upload</string>
    <string name="profile_picture">Profile picture</string>
    <string name="send_email">Send email</string>
    <string name="enter_email">enter email</string>

</resources>