<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="firstname"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="text"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="text"
        android:padding="5dp"
        android:layout_marginRight="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@id/imageButton" />


    <EditText
        android:id="@+id/et_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_phone_24"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/baseline_password_24"
        android:padding="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="@id/et_email"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageButton"
        android:contentDescription="@string/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/person"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@+id/et_pass"
        app:layout_constraintEnd_toEndOf="@id/et_pass"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_up"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_text"
        app:layout_constraintStart_toStartOf="@+id/tv_text"
        app:layout_constraintEnd_toEndOf="@id/tv_text"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_signing_up_you_have_agreed_to_our"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"/>

    <TextView
        android:id="@+id/tv_terms"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_text1"
        app:layout_constraintEnd_toEndOf="@id/tv_text1"
        app:layout_constraintTop_toBottomOf="@id/tv_text1"
        android:text="@string/terms_and_services"
        android:textColor="#6495ED"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="680dp" />

</androidx.constraintlayout.widget.ConstraintLayout>