<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:padding="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:autofillHints="" />
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:padding="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="@id/et_email"/>

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/appIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/bags"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="268dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout"
        app:layout_constraintStart_toStartOf="@+id/linearlayout"
        app:layout_constraintEnd_toEndOf="@id/linearlayout"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_logging_in_you_have_agreed_to_our"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"/>

    <TextView
        android:id="@+id/tv_terms"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_text1"
        app:layout_constraintEnd_toEndOf="@id/tv_text1"
        app:layout_constraintTop_toBottomOf="@id/tv_text1"
        android:text="@string/terms_and_services"
        android:textColor="#6495ED"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@id/et_pass"
        app:layout_constraintEnd_toEndOf="@id/et_pass">
        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:layout_marginLeft="225dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>